# cookiecutter-ansible-project

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  post_gen_project.sh
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  ansible.cfg  poetry.toml  pyproject.toml
{{cookiecutter.project_slug}}/: .ansible-lint  .gitignore  .pre-commit-config.yml  ansible.cfg  pyproject.toml  requirements.txt
