[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
{% if cookiecutter.ansible_version !='latest' -%}
ansible="{{cookiecutter.ansible_version}}"
{%- else -%}
ansible="*"
{%- endif %}

[tool.poetry.group.dev.dependencies]
molecule = "^6.0.2"
molecule-docker = "^2.1.0"
flake8 = "^6.1.0"
ansible-lint={ version = "^6.22.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
