[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
{% if cookiecutter.ansible_version !='latest' -%}
ansible="{{cookiecutter.ansible_version}}"
{%- else -%}
ansible="*"
{%- endif %}
ansible-lint = "*"
molecule = "*"
molecule-docker = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
